# ChangeLog for app-sci/lightspeed
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/lightspeed/Attic/ChangeLog,v 1.3 2003/02/13 20:38:23 vapier Exp $

*lightspeed-1.2a (12 Jan 2003)

  12 Jan 2003; Marin Holzer <mholzer@gentoo.org> lightspeed-1.2a.ebuild
  files/digest-lightspeed-1.2a ChangeLog :
  Added initial Version submitted by pez@apocalyptech.com in #13029
