@@ -1,4 +1,4 @@
-MD5 b08ae526f021cfa662336aa4395a6ddb ChangeLog 434
-MD5 f69ff251ad2f5efbac352a1a35ed548e lightspeed-1.2a.ebuild 1163
+MD5 01a9fe081c4632939f53fae73b38eb46 lightspeed-1.2a.ebuild 1170
+MD5 617eb4dec08babfe5f0ce035d7b49056 ChangeLog 545
 MD5 8c623e53daafa025137077c6b65815bd metadata.xml 156
 MD5 31ecec601dfd11e746121559c07fabe2 files/digest-lightspeed-1.2a 128
