@@ -1,6 +1,9 @@
 # ChangeLog for app-sci/lightspeed
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/lightspeed/Attic/ChangeLog,v 1.3 2003/02/13 20:38:23 vapier Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/lightspeed/Attic/ChangeLog,v 1.4 2004/03/09 14:37:13 aliz Exp $
+
+  09 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> lightspeed-1.2a.ebuild:
+  Adding amd64 keyword. Closing #43776.
 
 *lightspeed-1.2a (12 Jan 2003)
 
